# minitel-workbench

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONSTITUTION.md  CONTRIBUTING.md  CREDITS.md  LICENSE  README.md  ROADMAP.md  mkdocs.yml  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: hardware-report.md  service-submission.md
.github/workflows/: ci.yml
docs/: index.md
docs/design/: design-notebook.md
docs/guides/: diagnosing.md  getting-started.md  keyboard.md  services.md  studio.md
scripts/: Launch Minitel Workbench.command  MiniPavi.command  Minitel Connect.command  Minitel Workbench.command  Retrocampus.command  build_app.sh  make-app.sh
src/minitel_workbench/: __init__.py  __main__.py  ai.py  benchmark.py  bridge.py  channel.py  cli.py  config.py  diagnostics.py  recording.py  status.py  telephone.py
src/minitel_workbench/gui/: __init__.py  __main__.py  app.py  controller.py
src/minitel_workbench/hardware/: __init__.py  capability.py  detect.py  identify.py  link.py  setup.py
src/minitel_workbench/monitor/: __init__.py  canvas_render.py  filmstrip.py  screen.py
src/minitel_workbench/resources/: __init__.py  resources.json
src/minitel_workbench/services/: __init__.py  directory.json  registry.py
src/minitel_workbench/transport/: __init__.py  local_demo.py  menu_server.py  tcp.py  telnet.py  websocket.py
src/minitel_workbench/videotex/: __init__.py  constants.py  decoder.py  (+2 more)
tests/: conftest.py  test_ai.py  test_benchmark.py  test_canvas_render.py  test_cept.py  test_config.py  test_detect.py  test_diagnostics.py  test_end_to_end.py  test_filmstrip.py  test_gui_controller.py  test_local_echo.py  test_page_and_server.py  test_protocol.py  test_reconnect.py  test_recording.py  test_registry.py  test_rep_pro.py  test_resources.py  test_screen.py  test_setup.py  test_status.py  test_telephone.py  test_telnet_filter.py  test_videotex_decoder.py  test_view_recording.py
